--- a/index.html
+++ b/index.html
@@ -11,90 +11,87 @@
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Exo:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <title>Rosie Odenkirk | Resume</title>
 </head>
 
 <body>
     <header>
-        <div class="container-fluid">
-            <div class="row">
-                <a href="index.html" class="col-md-4 rosie-logo"></a>
+        <div class="row no-gutters text-white">
+            <a href="index.html" class="col-md-4 rosie-logo"></a>
 
-                <div class="col-md-8">
-                    <div class="row">
-                        <div class="col-12">
-                            <h1 class="header-name">Rosie Odenkirk</h1>
-                            <p>Full Stack Developer</p>
-                        </div>
-                    </div>
-
-                    <!-- Navbar -->
-
-                    <div class="row">
-                        <div class="col-6 col-sm-3 menu-item text-center">
-                            <a href="index.html" class="menu-link text-uppercase text-center">
-                                <i class="fa fa-home d-block"></i>
-                                <span>Home</span>
-                            </a>
-                        </div>
-                        <div class="col-6 col-sm-3 menu-item text-center">
-                            <a href="resume.html" class="menu-link text-uppercase text-center">
-                                <i class="fa fa-graduation-cap d-block"></i>
-                                <span>Resume</span>
-                            </a>
-                        </div>
-                        <div class="col-6 col-sm-3 menu-item text-center">
-                            <a href="contact.html" class="menu-link text-uppercase text-center">
-                                <i class="far fa-comment d-block"></i>
-                                <span>Contact</span>
-                            </a>
-                        </div>
-                        <div class="col-6 col-sm-3 menu-item text-center">
-                            <a href="#" target="_blank" class="menu-link text-uppercase text-center">
-                                <i class="fas fa-download d-block"></i>
-                                <span>Download CV</span>
-                            </a>
-                        </div>
+            <div class="col-md-8">
+                <div class="row no-gutters bgcolor__header">
+                    <div class="col-12 header-text">
+                        <h1 class="header-name">Rosie Odenkirk</h1>
+                        <p class="header-title">Full Stack Developer</p>
                     </div>
                 </div>
-                <!-- /navbar -->
+
+                <!-- Navbar -->
+
+                <div class="row no-gutters">
+                    <div class="col-6 col-sm-3 menu-item bgcolor__menuitem--home hvr-sweep-to-bottom">
+                        <a href="index.html">
+                            <i class="fa fa-home d-block"></i>
+                            <span>Home</span>
+                        </a>
+                    </div>
+                    <div class="col-6 col-sm-3 menu-item bgcolor__menuitem--resume hvr-sweep-to-bottom">
+                        <a href="resume.html">
+                            <i class="fa fa-graduation-cap d-block"></i>
+                            <span>Resume</span>
+                        </a>
+                    </div>
+                    <div class="col-6 col-sm-3 menu-item bgcolor__menuitem--contact hvr-sweep-to-bottom">
+                        <a href="contact.html">
+                            <i class="far fa-comment d-block"></i>
+                            <span>Contact</span>
+                        </a>
+                    </div>
+                    <div class="col-6 col-sm-3 menu-item bgcolor__menuitem--download hvr-sweep-to-bottom">
+                        <a href="assets/cv/sample-cv.pdf" target="_blank" class="menu-link">
+                            <i class="fas fa-download d-block"></i>
+                            <span>Download CV</span>
+                        </a>
+                    </div>
+                </div>
             </div>
-        </div>
-        </div>
+            <!-- /navbar -->
         </div>
     </header>
 
     <section class="container-fluid">
         <div class="row">
             <!-- personal info -->
-            <div class="col-md-4">
-                <div class="row">
-                    <h3 class="col-12 text-uppercase py-3">Personal info</h3>
+            <div class="col-md-4 bgcolor__personalinfo">
+                <div class="row p-3">
+                    <h3 class="col-12 text-uppercase section-heading">Personal info</h3>
                 </div>
                 <div class="personal-info-item d-flex flex-row flex-md-column  flex-lg-row mb-4">
                     <div
-                        class="personal-info-key d-inline-block text-uppercase mx-3 w-25 text-uppercase font-weight-bold">
+                        class="personal-info-key d-inline-block text-uppercase mr-3 w-25 text-uppercase font-weight-bold">
                         Name:</div>
                     <div class="personal-info-value d-inline-block w-50">Rosie Odenkirk</div>
                 </div>
                 <div class="personal-info-item d-flex flex-row flex-md-column flex-lg-row mb-4">
                     <div
-                        class="personal-info-key d-inline-block text-uppercase mx-3 w-25 align-top text-uppercase font-weight-bold">
+                        class="personal-info-key d-inline-block text-uppercase mr-3 w-25 align-top text-uppercase font-weight-bold">
                         Address:</div>
                     <div class="personal-info-value d-inline-block w-50 align-top">17 Riverdale, Catskills, NY USA</div>
                 </div>
                 <div class="personal-info-item d-flex flex-row flex-md-column flex-lg-row mb-4">
                     <div
-                        class="personal-info-key d-inline-block text-uppercase mx-3 w-25 text-uppercase font-weight-bold">
+                        class="personal-info-key d-inline-block text-uppercase mr-3 w-25 text-uppercase font-weight-bold">
                         Phone:</div>
                     <div class="personal-info-value d-inline-block w-50 align-top">555 204 1973</div>
                 </div>
                 <div class="personal-info-item d-flex flex-row flex-md-column flex-lg-row mb-4">
                     <div
-                        class="personal-info-key d-inline-block text-uppercase mx-3 w-25 text-uppercase font-weight-bold">
+                        class="personal-info-key d-inline-block text-uppercase mr-3 w-25 text-uppercase font-weight-bold">
                         Email:</div>
                     <div class="personal-info-value d-inline-block w-50 align-top">rosie.odenkirk@hansaw.com</div>
                 </div>
@@ -102,9 +99,9 @@
             <!-- /personal info -->
 
             <!-- about me -->
-            <div class="col-md-8 about-me">
-                <div class="row">
-                    <h3 class="col-12 text-uppercase py-3">About me</h3>
+            <div class="col-md-8 about-me pb-5">
+                <div class="row p-3">
+                    <h3 class="col-12 text-uppercase section-heading">About me</h3>
                 </div>
                 <div class="row">
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
@@ -163,7 +160,7 @@
         </div>
     </section>
 
-    <footer class="container-fluid bg-info">
+    <footer class="container-fluid">
         <div class="row text-white">
             <div class="col-sm-4">
                 <h5 class="text-uppercase footer-heading">About</h5>
@@ -172,8 +169,8 @@
             </div>
             <div class="col-sm-4">
                 <h5 class="text-uppercase footer-heading">Download</h5>
-                <p class="footer-text">Need a printable version of my CV? Download it here.<a href="" target="_blank"><i
-                            class="fas fa-download d-block"></i></a></p>
+                <p class="footer-text">Need a printable version of my CV? Download it here.<a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-download"><i
+                            class="fas fa-download d-inline"></i></a></p>
             </div>
             <div class="col-sm-4">
                 <h5 class="text-uppercase footer-heading">Social</h5>
@@ -194,11 +191,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
-
 </body>
 
 </html>
