--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Exo:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <title>Rosie Odenkirk | Resume</title>
 </head>
@@ -66,91 +67,73 @@
 
     <section class="container-fluid">
         <div class="row">
-            <!-- personal info -->
-            <div class="col-md-4 bgcolor__personalinfo">
+            <!-- work history -->
+            <div class="col-md-4 bgcolor__workhistory">
                 <div class="row p-3">
-                    <h3 class="col-12 text-uppercase section-heading">Personal info</h3>
+                    <h3 class="col-12 text-uppercase text-white section-heading">Work History</h3>
                 </div>
-                <div class="personal-info-item d-flex flex-row flex-md-column  flex-lg-row mb-4">
-                    <div
-                        class="personal-info-key d-inline-block text-uppercase mr-3 w-25 text-uppercase font-weight-bold">
-                        Name:</div>
-                    <div class="personal-info-value d-inline-block w-50">Rosie Odenkirk</div>
-                </div>
-                <div class="personal-info-item d-flex flex-row flex-md-column flex-lg-row mb-4">
-                    <div
-                        class="personal-info-key d-inline-block text-uppercase mr-3 w-25 align-top text-uppercase font-weight-bold">
-                        Address:</div>
-                    <div class="personal-info-value d-inline-block w-50 align-top">17 Riverdale, Catskills, NY USA</div>
-                </div>
-                <div class="personal-info-item d-flex flex-row flex-md-column flex-lg-row mb-4">
-                    <div
-                        class="personal-info-key d-inline-block text-uppercase mr-3 w-25 text-uppercase font-weight-bold">
-                        Phone:</div>
-                    <div class="personal-info-value d-inline-block w-50 align-top">555 204 1973</div>
-                </div>
-                <div class="personal-info-item d-flex flex-row flex-md-column flex-lg-row mb-4">
-                    <div
-                        class="personal-info-key d-inline-block text-uppercase mr-3 w-25 text-uppercase font-weight-bold">
-                        Email:</div>
-                    <div class="personal-info-value d-inline-block w-50 align-top">rosie.odenkirk@hansaw.com</div>
-                </div>
-            </div>
-            <!-- /personal info -->
 
-            <!-- about me -->
+
+            </div>
+            <!-- /work history -->
+
+            <!-- my skills -->
             <div class="col-md-8 about-me pb-5">
                 <div class="row p-3">
-                    <h3 class="col-12 text-uppercase section-heading">About me</h3>
+                    <h3 class="col-12 text-uppercase section-heading">My skills</h3>
                 </div>
                 <div class="row">
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-6">
                         <div class="row">
                             <div class="col-2 text-right">
-                                <i class="fas fa-question"></i>
+                                <i class="fas fa-tv"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="about-me-headings text-uppercase">What do I do?</h4>
-                                <p class="about-me-text">
-                                    I'm a skilled Full Stack Developer with a wealth of diverse life and
-                                    technical
-                                    experience that I bring to every project.
+                                <h4 class="text-uppercase">Front End</h4>
+                                <p>
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I
+                                    also have extensive experience in Front End Frameworks such as Angular and React.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-6">
                         <div class="row">
                             <div class="col-2 text-right">
-                                <i class="fas fa-thumbs-up"></i>
+                                <i class="fa fa-cogs"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="about-me-headings text-uppercase">How do I do it?</h4>
-                                <p class="about-me-text">
-                                    I follow form as well as function. I know that the aesthetics of effective
-                                    design
-                                    combined with application speed, security and reliability combine to create
-                                    a great
-                                    user experience.
+                                <h4 class="text-uppercase">Back End</h4>
+                                <p>
+                                    I specialize in data-driven web applications. Many of my projects utilise
+                                    document-based data. I use Python and Django in conjunction with MongoDB to process
+                                    and present information.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2 text-right">
-                                <i class="fas fa-bolt"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="about-me-headings text-uppercase">Why hire me?</h4>
-                                <p class="about-me-text">
-                                    I work quickly and effectively in getting things built and working across
-                                    the stack.
-                                    I'm an excellent communicator who thrives in bright and enthusiastic teams
-                                    and I'm
-                                    also a self starter when working solo.
-                                </p>
-                            </div>
+                </div>
+                <div class="row justify-content-center skill-progress">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 90%"
+                                aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"><span class="skill-progress-key">HTML / HTML 5</span></div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 80%" aria-valuenow="80"
+                                aria-valuemin="0" aria-valuemax="100"><span class="skill-progress-key">CSS / CSS3</span></div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" style="width: 75%"
+                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"><span class="skill-progress-key">JavaScript / JQuery</span></div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" style="width: 80%"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span class="skill-progress-key">Django / Python</span></div>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: 80%"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span class="skill-progress-key">SQL / NoSQL</span></div>
                         </div>
                     </div>
                 </div>
@@ -169,7 +152,8 @@
             </div>
             <div class="col-sm-4">
                 <h5 class="text-uppercase footer-heading">Download</h5>
-                <p class="footer-text">Need a printable version of my CV? Download it here.<a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-download"><i
+                <p class="footer-text">Need a printable version of my CV? Download it here.<a
+                        href="assets/cv/sample-cv.pdf" target="_blank" class="cv-download"><i
                             class="fas fa-download d-inline"></i></a></p>
             </div>
             <div class="col-sm-4">
