--- a/contact.html
+++ b/contact.html
@@ -93,25 +93,52 @@
             </div>
             <div class="col-sm-4">
                 <h5 class="text-uppercase footer-heading">Download</h5>
-                <p class="footer-text">Need a printable version of my CV? Download it here.<a
-                        href="assets/cv/sample-cv.pdf" target="_blank" class="cv-download"><i
-                            class="fas fa-download d-inline"></i></a></p>
+                <p class="footer-text">Need a printable version of my CV? Download it here.
+                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-download">
+                        <i class="fas fa-download d-inline" aria-hidde="true"></i>
+                        <span class="sr-only">Download CV</span>
+                    </a>
+                </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="text-uppercase footer-heading">Social</h5>
                 <ul class="list-inline social-links">
-                    <li class="list-inline-item mr-0"><a href="http://www.facebook.com" target="_blank"><i
-                                class="fab fa-facebook-f"></i></a></li>
-                    <li class="list-inline-item mr-0"><a href="http://www.twitter.com" target="_blank"><i
-                                class="fab fa-twitter"></i></a></li>
-                    <li class="list-inline-item mr-0"><a href="http://www.linkedin.com" target="_blank"><i
-                                class="fab fa-linkedin-in"></i></a></li>
-                    <li class="list-inline-item mr-0"><a href="http://www.pinterest.com" target="_blank"><i
-                                class="fab fa-pinterest"></i></a></li>
-                    <li class="list-inline-item mr-0"><a href="http://www.instagram.com" target="_blank"><i
-                                class="fab fa-instagram"></i></a></li>
-                    <li class="list-inline-item mr-0"><a href="http://www.youtube.com" target="_blank"><i
-                                class="fab fa-youtube"></i></a></li>
+                    <li class="list-inline-item mr-0">
+                        <a href="http://www.facebook.com" target="_blank">
+                            <i class="fab fa-facebook-f" aira-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item mr-0">
+                        <a href="http://www.twitter.com" target="_blank">
+                            <i class="fab fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item mr-0">
+                        <a href="http://www.linkedin.com" target="_blank">
+                            <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item mr-0">
+                        <a href="http://www.pinterest.com" target="_blank">
+                            <i class="fab fa-pinterest" aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item mr-0">
+                        <a href="http://www.instagram.com" target="_blank">
+                            <i class="fab fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item mr-0">
+                        <a href="http://www.youtube.com" target="_blank">
+                            <i class="fab fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">Youtube</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
