Add github.html and interests.html

--- a/contact.html
+++ b/contact.html
@@ -35,25 +35,37 @@
                 <!-- Navbar -->
 
                 <div class="row no-gutters">
-                    <div class="col-6 col-sm-3 menu-item bgcolor__menuitem--home hvr-sweep-to-bottom">
+                    <div class="col-xs-6 col-sm-2 menu-item bgcolor__menuitem--home hvr-sweep-to-bottom">
                         <a href="index.html">
                             <i class="fa fa-home d-block"></i>
                             <span>Home</span>
                         </a>
                     </div>
-                    <div class="col-6 col-sm-3 menu-item bgcolor__menuitem--resume hvr-sweep-to-bottom">
+                    <div class="col-xs-6 col-sm-2 menu-item bgcolor__menuitem--resume hvr-sweep-to-bottom">
                         <a href="resume.html">
                             <i class="fa fa-graduation-cap d-block"></i>
                             <span>Resume</span>
                         </a>
                     </div>
-                    <div class="col-6 col-sm-3 menu-item bgcolor__menuitem--contact hvr-sweep-to-bottom">
+                    <div class="col-xs-6 col-sm-2 menu-item bgcolor__menuitem--interests hvr-sweep-to-bottom">
+                        <a href="interests.html">
+                            <i class="fa fa-graduation-cap d-block"></i>
+                            <span>Interests</span>
+                        </a>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 menu-item bgcolor__menuitem--github hvr-sweep-to-bottom">
+                        <a href="github.html">
+                            <i class="fa fa-graduation-cap d-block"></i>
+                            <span>Github</span>
+                        </a>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 menu-item bgcolor__menuitem--contact hvr-sweep-to-bottom">
                         <a href="contact.html">
                             <i class="far fa-comment d-block"></i>
                             <span>Contact</span>
                         </a>
                     </div>
-                    <div class="col-6 col-sm-3 menu-item bgcolor__menuitem--download hvr-sweep-to-bottom">
+                    <div class="col-xs-6 col-sm-2 menu-item bgcolor__menuitem--download hvr-sweep-to-bottom">
                         <a href="assets/cv/sample-cv.pdf" target="_blank" class="menu-link">
                             <i class="fas fa-download d-block"></i>
                             <span>Download CV</span>
