--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Exo:wght@300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <title>Rosie Odenkirk | Resume</title>
 </head>
@@ -34,25 +35,37 @@
                 <!-- Navbar -->
 
                 <div class="row no-gutters">
-                    <div class="col-6 col-sm-3 menu-item bgcolor__menuitem--home hvr-sweep-to-bottom">
+                    <div class="col-xs-6 col-sm-2 menu-item bgcolor__menuitem--home hvr-sweep-to-bottom">
                         <a href="index.html">
                             <i class="fa fa-home d-block"></i>
                             <span>Home</span>
                         </a>
                     </div>
-                    <div class="col-6 col-sm-3 menu-item bgcolor__menuitem--resume hvr-sweep-to-bottom">
+                    <div class="col-xs-6 col-sm-2 menu-item bgcolor__menuitem--resume hvr-sweep-to-bottom">
                         <a href="resume.html">
                             <i class="fa fa-graduation-cap d-block"></i>
                             <span>Resume</span>
                         </a>
                     </div>
-                    <div class="col-6 col-sm-3 menu-item bgcolor__menuitem--contact hvr-sweep-to-bottom">
+                    <div class="col-xs-6 col-sm-2 menu-item bgcolor__menuitem--interests hvr-sweep-to-bottom">
+                        <a href="interests.html">
+                            <i class="fa fa-graduation-cap d-block"></i>
+                            <span>Interests</span>
+                        </a>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 menu-item bgcolor__menuitem--github hvr-sweep-to-bottom">
+                        <a href="github.html">
+                            <i class="fa fa-graduation-cap d-block"></i>
+                            <span>Github</span>
+                        </a>
+                    </div>
+                    <div class="col-xs-6 col-sm-2 menu-item bgcolor__menuitem--contact hvr-sweep-to-bottom">
                         <a href="contact.html">
                             <i class="far fa-comment d-block"></i>
                             <span>Contact</span>
                         </a>
                     </div>
-                    <div class="col-6 col-sm-3 menu-item bgcolor__menuitem--download hvr-sweep-to-bottom">
+                    <div class="col-xs-6 col-sm-2 menu-item bgcolor__menuitem--download hvr-sweep-to-bottom">
                         <a href="assets/cv/sample-cv.pdf" target="_blank" class="menu-link">
                             <i class="fas fa-download d-block"></i>
                             <span>Download CV</span>
@@ -183,8 +196,8 @@
                         <a href="http://www.facebook.com" target="_blank">
                             <i class="fab fa-facebook-f" aira-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
-                            </a>
-                        </li>
+                        </a>
+                    </li>
                     <li class="list-inline-item mr-0">
                         <a href="http://www.twitter.com" target="_blank">
                             <i class="fab fa-twitter" aria-hidden="true"></i>
@@ -195,26 +208,26 @@
                         <a href="http://www.linkedin.com" target="_blank">
                             <i class="fab fa-linkedin-in" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
-                            </a>
-                        </li>
+                        </a>
+                    </li>
                     <li class="list-inline-item mr-0">
                         <a href="http://www.pinterest.com" target="_blank">
                             <i class="fab fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
-                            </a>
-                        </li>
+                        </a>
+                    </li>
                     <li class="list-inline-item mr-0">
                         <a href="http://www.instagram.com" target="_blank">
-                        <i class="fab fa-instagram" aria-hidden="true"></i>
-                        <span class="sr-only">Instagram</span>
-                            </a>
-                        </li>
+                            <i class="fab fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
                     <li class="list-inline-item mr-0">
                         <a href="http://www.youtube.com" target="_blank">
                             <i class="fab fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">Youtube</span>
-                            </a>
-                        </li>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
