Add google maps with markers

--- a/interests.html
+++ b/interests.html
@@ -232,6 +232,10 @@
             </div>
         </div>
     </footer>
+
+    <script src="assets/js/map.js"></script>
+    <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOtwhMThB9DTvdfqvUkRUIBmD0W7XADzc&callback=initMap&libraries=&v=weekly" async></script>
 </body>
 
 </html>
